--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,12 @@ dependencies = [
     "tree-sitter-c>=0.21.0",
     "tree-sitter-cpp>=0.21.0",
 ]
+
+[dependency-groups]
+dev = [
+    "black>=25.12.0",
+]
+
+[tool.black]
+line-length = 88
+target-version = ["py311"]
